<resources>
    <string name="app_name">Bitso</string>
    <string name="f_home_identifier_text">Home</string>
    <string name="f_activity_identifier_text">User Activity</string>
    <string name="f_chat_identifier_text">Chat</string>
    <string name="f_card_identifier_text">Card</string>

    <!-- Tab names -->
    <string name="tab_home">Home</string>
    <string name="tab_activity">Activity</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_card">Card</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>

    <!-- Toolbar -->
    <string name="bitso_wallet">BITSO WALLET</string>
    <string name="total_pesos">TOTAL EN PESOS (MXN)</string>
    <string name="fondear">Fondear</string>
    <string name="enviar">Enviar</string>
    <string name="convertir">Convertir</string>

    <!-- Balances -->
    <string name="right_slide_balances">MIS BALANCES</string>
    <string name="compound_balance">Saldo Combinado</string>
    <string name="mxn_balance">Pesos (MXN)</string>
    <string name="btc_balance">Bitcoin (BTC)</string>
    <string name="eth_balance">Ether (ETH)</string>
    <string name="profile_lbl">Perfil</string>
    <string name="configurations_lbl">Configuracion</string>
    <string name="click_profile">Click en Perfil</string>
    <string name="click_configurations">Click en configuraciones</string>
    <string name="hdr_balances">Total en Pesos</string>

    <!-- Main Activity -->
    <string name="main_scan_qr">Leer codigo QR</string>
    <string name="main_continue">Continuar como</string>

    <!-- Errors -->
    <string name="no_internet_connection">El dispositivo no tiene conexion a internet, porfavor conectate y vuelve a intentarlo</string>
    <string name="cancelled_scan">No fue posible obtener credenciales, intente de nuevo</string>
    <string name="no_credencials_fetched">No fue posible obtener credenciales, intente de nuevo</string>
    <string name="no_compound_balance">No fue posible calcular el balance compuesto</string>
    <string name="no_ledgder_fetched">No fue posible obtener las operaciones de ledger</string>
    <string name="no_valid_response">El json indica que hay un error</string>

    <!-- Instructions -->
    <string name="place_qr">Coloca QR para poder iniciar sesion</string>
    <string name="open_drower">Abriendo drawer</string>
    <string name="close_drower">Cerrando drawer</string>
    <string name="qr_link">Consulta tu QR en https://bitso.com/user/link</string>

    <!-- Status -->
    <string name="login">Iniciando sesion...</string>
    <string name="fetching_ledger">Obteniendo operaciones de ledger...</string>
</resources>
